# magic_carpet_2

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  OpenAL.patch  README.md  README_OpenAL  README_controllers  TODO
assets/: config.ini  config_3d_pro.ini  config_attack_3.ini  config_gamepad.ods  config_xbox.ini
assets/scripts/: check_install.sh  coverity.sh  mcarpet2  mcarpet2_install.sh  re_cmake.sh  replace.sh  run.sh
src/: CMakeLists.txt  config.h  remc2.cpp  stdafx.cpp  stdafx.h  sub_main.cpp  sub_main.h  version.h
src/engine/: Animation.cpp  Animation.h  Basic.cpp  Basic.h  CommandLineParser.cpp  CommandLineParser.h  Compare.cpp  Compare.h  GameRenderGL.cpp  GameRenderGL.h  GameRenderHD.cpp  GameRenderHD.h  GameRenderInterface.h  GameRenderNG.cpp  GameRenderNG.h  GameRenderOriginal.cpp  GameRenderOriginal.h  MapType.h  MenusAndIntros.cpp  MenusAndIntros.h  Network.cpp  Network.h  ProjectionPolygon.cpp  ProjectionPolygon.h  Rectangle.h  RenderThread.cpp  RenderThread.h  Sound.cpp  Sound.h  Terrain.cpp  Terrain.h  TextureMaps.cpp  TextureMaps.h  TypeConfigDat.h  Type_Animations.h  Type_BigSpritesBuffer.h  Type_D404C.cpp  Type_D404C.h  Type_D93C0_Bldgprmbuffer.cpp  Type_D93C0_Bldgprmbuffer.h  (+33 more)
src/portability/: dirent-x.h  dirent.c  fcaseopen.cpp  fcaseopen.h  mctypes.h  port_filesystem.cpp  port_filesystem.h  port_imgui.cpp  port_imgui.h  port_inputs.h  port_net.cpp  port_net.h  port_openal.cpp  port_openal.h  port_outputs.cpp  port_outputs.h  port_sdl_joystick.cpp  port_sdl_joystick.h  port_sdl_sound.cpp  port_sdl_sound.h  port_sdl_vga_mouse.cpp  port_sdl_vga_mouse.h  port_show_perifery.cpp  port_show_perifery.h  port_show_periphery.cpp  port_sound_lut.h  port_time.cpp  port_time.h  xmi2mid.h
src/utilities/: BitmapIO.cpp  BitmapIO.h  DataFileIO.cpp  DataFileIO.h  Maths.cpp  Maths.h  SafeQueue.h  Wave.h
